# lakehouse-platform

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
airflow/: .env.example  docker-compose.yml  requirements.txt
airflow/dags/: crimes_ingest_dag.py  weather_ingest_dag.py
configs/: sources.yaml
databricks/notebooks/: 00_setup_catalog.py  01_bronze_batch.py  02_silver_weather.py  03_silver_crimes.py  04_gold.py  05_streaming_events.py
databricks/resources/: lakehouse_jobs.yml
docs/: architecture.md  interview_talking_points.md  setup.md
scripts/: produce_events.py
src/lakehouse/: __init__.py  logging_conf.py
src/lakehouse/ingestion/: api_client.py  landing.py  watermark.py
src/lakehouse/quality/: expectations.py
src/lakehouse/transforms/: common.py  crimes.py  streaming.py  weather.py
terraform/: main.tf
tests/: conftest.py
tests/unit/: test_crimes_transforms.py  test_expectations.py  test_flatten_hourly.py  test_scd2.py  test_watermark.py  test_weather_transforms.py
