[project]
name = "lakehouse-platform"
version = "0.1.0"
description = "Medallion architecture lakehouse on Databricks Free Edition, AWS free tier, Airflow, and GitHub Actions"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "boto3>=1.34",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pyspark==3.5.1",
    "delta-spark==3.2.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
